# ferrule

./: .commitlintrc.js  .gitignore  Cargo.toml  README.md  biome.json  bun.lockb  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: release.yaml
frontend_apps/json-admin/: .env  .env.development  auto-imports.d.ts  biome.json  components.d.ts  package.json  rsbuild.config.ts  tsconfig.json
frontend_apps/pc-ferrume/: README.md  bun.lockb  eslint.config.mjs  package.json  rsbuild.config.ts
frontend_apps/react-demo/: package.json
frontend_packages/editorjs-react/: package.json  rslib.config.ts
frontend_packages/jsonlee-promise/: README.md  package-lock.json  package.json  rslib.config.ts  tsconfig.json
rust_apps/json-server/: Cargo.toml
rust_apps/json-server/config/: config.toml
rust_apps/json-server/src/: main.rs
rust_apps/json-server/src/config/: lib.rs  mod.rs
rust_apps/json-server/src/config/modules/: system.rs
rust_apps/json-server/src/global/: configs.rs  mod.rs
rust_apps/tauri-app/: Cargo.toml  tauri.conf.json
rust_apps/tauri-app/capabilities/: default.json  desktop.json
rust_apps/tauri-app/config/: config.toml
rust_apps/tauri-app/icons/: icon.icns
rust_apps/tauri-app/src/: lib.rs  main.rs
rust_apps/tauri-app/src/core/: global_shortcut.rs  mod.rs  nsapp.rs  store.rs  tray.rs  window_effects.rs  windows.rs
rust_apps/tauri-app/src/global/: mod.rs
rust_apps/tauri-app/src/global/config/: lib.rs  mod.rs
rust_apps/tauri-app/src/global/config/models/: config.rs  deepl.rs  mod.rs
rust_apps/tauri-app/src/modules/: mod.rs
rust_apps/tauri-app/src/modules/ast/: service.rs
rust_apps/tauri-app/src/modules/clipboard/: service.rs
rust_apps/tauri-app/src/modules/file/: service.rs
rust_apps/tauri-app/src/modules/setting/: model.rs  service.rs
rust_apps/tauri-app/src/modules/translate/: mod.rs  model.rs  service.rs  utils.rs
rust_packages/actix-core/: Cargo.toml
(+117 files in other folders)
