[package]
name = "ferrume"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"

[workspace]
members = [
  "rust_apps/json-server",
  "rust_apps/tauri-app",
  "rust_packages/actix-core",
  "rust_packages/config",
  "rust_packages/json-utils",
]

[profile.dev]
incremental = true

[build]
incremental = true
