[package]
name = "json-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix_core ={ path="../../rust_packages/actix-core"}
chrono = "0.4.38"
json-config = { path = "../../rust_packages/config" }
once_cell = "1.20.2"
serde = "1.0.215"
tokio = "1.41.1"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
